Dang lam chac nang dang ky user

--- a/web/assets/css/register.css
+++ b/web/assets/css/register.css
@@ -1,5 +1,3 @@
-
-/* sign in FORM */
 #logreg-forms{
     width:412px;
     margin:10vh auto;
@@ -30,7 +28,6 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
-
 #logreg-forms .social-login{
     width:390px;
     margin:0 auto;
@@ -53,27 +50,6 @@
     width:200px;
     border:1px solid red;
 }
-
-
-#logreg-forms button[type="submit"]{ margin-top:10px; }
-
-#logreg-forms .facebook-btn{  background-color:#3C589C; }
-
-#logreg-forms .google-btn{ background-color: #DF4B3B; }
-
-#logreg-forms .form-reset, #logreg-forms .form-signup{ display: none; }
-
-#logreg-forms .form-signup .social-btn{ width:210px; }
-
-#logreg-forms .form-signup input { margin-bottom: 2px;}
-
-.form-signup .social-login{
-    width:210px !important;
-    margin: 0 auto;
-}
-
-/* Mobile */
-
 @media screen and (max-width:500px){
     #logreg-forms{
         width:300px;
@@ -98,12 +74,12 @@
     #logreg-forms .social-btn span{
         display: none;
     }
-    #logreg-forms  .facebook-btn:after{
+    /* #logreg-forms  .facebook-btn:after{
         content:'Facebook';
     }
   
     #logreg-forms  .google-btn:after{
         content:'Google+';
-    }
+    } */
     
 }
