--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -15,7 +15,8 @@ html{
 
 #header {
     height: 46px;
-    background-color: black;
+    background-color: white;
+    color: black;
 }
 
 #nav {  
@@ -35,7 +36,7 @@ html{
 }
 
 #nav > li > a {
-    color: white;
+    color: black;
 }
 
 #nav li a{
@@ -58,7 +59,7 @@ html{
     display: none;
     min-width: 160px;
     position: absolute;
-    background-color: white;
+    background-color: black;
     box-shadow:  0 0 10px rgba(0, 0,0.3);
 }
 
@@ -78,7 +79,7 @@ html{
     padding: 0px 22px;
 }
 #header .shop-icon{
-    color: white;
+    color: black;
     font-size: 20px;
     line-height: 46px;
 }
@@ -96,7 +97,7 @@ html{
     padding: 0px 22px;
 } 
 #header .user-icon{
-    color: white;
+    color: black;
     font-size: 20px;
     line-height: 46px;
 }
@@ -115,7 +116,7 @@ html{
 }
 
 #header .search-icon{
-    color: white;
+    color: black;
     font-size: 20px;
     line-height: 46px;
 }
@@ -136,12 +137,12 @@ html{
 /*Conten*/
 #content{
     height: 1200px;
-    padding:20px 15px ;
+    /* padding:20px 15px ; */
 }
 
 /* Card*/
 .product-form{
-    padding-left: 65px;
+    /* padding-left: 65px; */
     text-decoration: none;
     width: 400px;
     float: left;
@@ -157,30 +158,67 @@ html{
 
 
 .card-image{
-    padding-top: 50%;
-    background-position: center;
-    background-size: cover;
+    width: 100%;
+    /* padding-top: 50%; */
+    /* background-position: center; */
+    /* background-size: cover; */
 }
 .card-name{
     text-decoration: none;
     color: black;
     /* background-position: center; */
-    padding-left: 60px;
+    /* padding-left: 60px; */
 }
 .card-price{
     color: black;
     text-decoration: none;
     padding-left: 60px;
 }
-
+/* Footer*/
 #footer{
-    height: 300px;
+    height: 400px;
     background-color: black;
 }
-.icon-footer{
-    padding-top: 20px;
+.footer-end{
+    padding-left: 35%;
+    padding-top: 10%;
+    width: 80%;
+    height: 400px;
+    /* float: left; */
+    /* margin-left: 425px; */
     color: white;
 }
+.footer-end .service{
+    float: left;
+    width: 26%;
+    height: 100%;
+    /* background-color: white; */
+    color: white;
+} 
+.footer-end .contact{
+    float: left;
+    width: 26%;
+    height: 50px;
+    /* background-color: white; */
+    color: white;
+    /* color: black; */
+}
+.footer-end .follow{
+    float: left;
+    width: 26%;
+    height: 50px;
+    /* background-color: white; */
+    color: white;
+}
+
+
+
+.icon-follow{
+    padding-top: 10px;    
+}
+/* .ti-instagram{
+    padding-top: 10px;
+} */
 /* LOGIN */
 
 
@@ -189,7 +227,7 @@ html{
 #admin-content{
     padding-left: 45px;
     height: 1080px;
-    background-color: grey;
+    background-color: gray;
 }
 
 
@@ -437,3 +475,65 @@ html{
     width: 650px;
     height: 400px;
 }
+/*=============================================================*/
+/* Mobile width < 740px */
+@media only screen and (max-width: 739px) {
+    
+    .product-form{
+        width: 50%;
+        height: 200px;
+    }
+    .product-form .product-detailt{
+        text-decoration: none;
+    }
+    .product-form .card{
+        width: 100%;
+    }               
+    .card-image{
+        width: 100%;
+    }
+    .card-name{
+        font-size: 90%;
+        color: black;
+        width: 100%;
+        height: 20px;
+        
+    }
+    #footer{
+        height: 700px;
+    }
+    .footer-end{
+        padding-top: 0%;
+        padding-left: 0%;
+        width: 100%;
+        height: 100%;        
+    }   
+    .footer-end .service{
+        float: none;
+        width: 100%;
+        height: 150px;        
+    } 
+    .footer-end .contact{
+        float: none;
+        height: 150px;        
+    }
+    .footer-end .follow{    
+        float: none;
+        height: 150px;        
+    }
+   
+}
+/* PC*/
+/* @media only screen and(min-width: 1024) {
+   
+} */
+
+
+
+
+
+
+
+
+
+
