--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -28,7 +28,7 @@ html{
     display: none;
 }
 #nav-mobile-buttom .nav-mobile-view{
-    font-size: 30px;
+    font-size: 25px;
 
 }
 .nav-overplay{
@@ -190,16 +190,28 @@ html{
 
 /* Card*/
 .product-form{
-    /* padding-left: 65px; */
+    padding: 15px 15px 15px 15px;
     text-decoration: none;
-    width: 400px;
+    width: 100%;
+    height: 1100px;
     float: left;
 }
+/* #content .product-form:hover{
+    background-color: black;
+    cursor: pointer;
+} */
+
 .card{
+    float: left;
     text-decoration: none;
-    width: 448px;
+    width: 430px;
     height: 286px;
 }
+/* #content .card:hover{
+    background-color: black;
+    cursor: pointer;
+
+} */
 .product-detailt{
     text-decoration: none;
 }
@@ -214,13 +226,13 @@ html{
 .card-name{
     text-decoration: none;
     color: black;
-    /* background-position: center; */
-    /* padding-left: 60px; */
+    text-align: center;
 }
-.card-price{
+.card .card-price{
     color: black;
-    text-decoration: none;
-    padding-left: 60px;
+    position: center;
+    text-align: center;
+    /* object-position: center; */
 }
 /* Footer*/
 #footer{
@@ -500,15 +512,17 @@ html{
 
 /* Detail */
 #detail-product{
-    width: 1423px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     float: left;
 }
 
 .left-detail{
-    width: 400px;
+    width: 35%;
     height: 400px; 
     float: left;
+    color: white;
+    background-color: black;
 }
 .size{
     float: left;
@@ -516,45 +530,86 @@ html{
 
 .right-detail{
     float: left;
-    width: 1023px;
+    width: 65%;
     height: 400px
 }
 .detail-img{
-    width: 650px;
+    padding: 15px 15px 15px 15px;
+    width: 600px;
     height: 400px;
+}
+.mobile-detail{
+    display: none;
 }
 /*=============================================================*/
 /* Mobile width < 740px */
 @media only screen and (max-width: 739px) {
     
+    #header{
+        display: block;
+    }
+
     #nav{
         display: none;
     }
     #nav-mobile-buttom{
         display: block;
     }
+    .nav-close{
+        padding-top: 5px;
+        padding-right: 5px;
+        float: right;
+        cursor: pointer;
+    }
+    .user-button{
+        display: none;
+    }
 
 
     .product-form{
-        width: 50%;
-        height: 200px;
+        /* width: 100%;
+        height: 90%; */
     }
     .product-form .product-detailt{
         text-decoration: none;
     }
     .product-form .card{
-        width: 100%;
+        width: 50%;
+        height: 140px;
     }               
     .card-image{
         width: 100%;
     }
     .card-name{
-        font-size: 90%;
+        font-size: 60%;
         color: black;
         width: 100%;
-        height: 20px;
-        
+        height: 20px;       
+        white-space: nowrap;
+	    overflow: hidden;
+	    text-overflow: ellipsis;
     }
+    .card-price{
+        display: none;
+    }
+    .left-detail{
+        display: none;
+    }
+    .right-detail{        
+        width: 100%;
+        height: 300px;
+    }
+    .right-detail .detail-img{
+        width: 100%;
+        height: 300px;
+        padding: 15px 15px 15px 15px;
+    }
+    .mobile-detail{
+        text-align: center;
+        display: block;
+    }
+
+
     #footer{
         height: 700px;
     }
