--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -68,7 +68,6 @@ html{
 
 #nav {  
     display: inline-block;
-    float: left;
 }
 
 #nav ul{
@@ -488,7 +487,6 @@ html{
     height: 910px;
     background-color: white;
     float: left;
-    /* display: block; */
 }
 
 .user-top{
@@ -521,12 +519,24 @@ html{
     width: 35%;
     height: 400px; 
     float: left;
-    color: white;
-    background-color: black;
+    color: black;
+    /* background-color: black; */
+}
+.left-detail-text{
+    padding-top: 20px;
+    padding-left: 20px;
 }
 .size{
     float: left;
 }
+
+.add-card{
+    width: 90%;
+    height: 30px;
+    color: white;
+    background-color: black;
+}
+
 
 .right-detail{
     float: left;
@@ -566,10 +576,7 @@ html{
     }
 
 
-    .product-form{
-        /* width: 100%;
-        height: 90%; */
-    }
+   
     .product-form .product-detailt{
         text-decoration: none;
     }
